# git_learn

./: start.launch  start_simulation.sh
devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/lib/apriltag_ros/: apriltag_ros_continuous_node  apriltag_ros_single_image_client_node  apriltag_ros_single_image_server_node  controller.py  controller_v6.py  detector  start_trigger
devel/lib/gazebo_map_generator/: random_obstacle
devel/lib/pkgconfig/: apriltag_ros.pc  gazebo_map_generator.pc  mav_msgs.pc  mav_planning_msgs.pc  mav_state_machine_msgs.pc  mav_system_msgs.pc  realsense_gazebo_plugin.pc  referee_msgs.pc  rotors_comm.pc  rotors_description.pc  rotors_gazebo.pc  rotors_gazebo_plugins.pc  uav_gazebo.pc  uav_simulation.pc  velodyne_description.pc  velodyne_gazebo_plugins.pc
devel/lib/uav_simulation/: chao  detector  keyboard_control.py  ma  referee_system  start_trigger  yao
devel/share/apriltag_ros/cmake/: apriltag_ros-msg-extras.cmake  apriltag_ros-msg-paths.cmake  apriltag_rosConfig.cmake
devel/share/gazebo_map_generator/cmake/: gazebo_map_generatorConfig.cmake
devel/share/mav_msgs/cmake/: mav_msgs-msg-extras.cmake  mav_msgs-msg-paths.cmake  mav_msgsConfig.cmake
src/CICRSIM/: sim_env.sh
src/CICRSIM-master/: sim_env.sh
src/CICRSIM/cicr2023_simulator/uav_simulation/: CMakeLists.txt
src/CICRSIM/cicr2023_simulator/uav_simulation/src/: #include <cmath>  blockavoid.py  chao.cpp  controller.py  controller_v2.py  controllor_v4.py  detecter.cpp  detector.cpp  ma.cpp  start_trigger.cpp  test.py  untitled.py  yao.cpp
(+40 files in other folders)
